--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^19.2.3",
     "@google/genai": "^1.34.0",
     "lucide-react": "^0.561.0",
-    "react": "^19.2.3"
+    "react": "^19.2.3",
+    "jspdf": "^2.5.1",
+    "docx": "^9.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
